--- a/.github/workflows/run_stage1.yml
+++ b/.github/workflows/run_stage1.yml
@@ -44,25 +44,18 @@ jobs:
           echo "PUBLIC_IP=${PUBLIC_IP}" >> $GITHUB_ENV
         env:
           PUBLIC_IP: ${{ needs.launch-instance.outputs.PUBLIC_IP }}
-      - name: Check Token
-        env:
-          TOKEN: ${{ needs.add-runner-to-repo.outputs.TOKEN }}
-        run: echo TOKEN=$TOKEN
+      # - name: Check Token
+      #   env:
+      #     TOKEN: ${{ needs.add-runner-to-repo.outputs.TOKEN }}
+      #   run: echo TOKEN=$TOKEN
       - name: Dummy SSH run to fix stuff
-        run: |
-          set +e # disable stop-on-error
-          /bin/echo "$PRIVKEY" | tee privkey.pem >/dev/null
-          chmod 400 privkey.pem
-          head -n1 privkey.pem
-          mkdir ~/.ssh
-          touch ~/.ssh/known_hosts
-          while true; do
-            ssh-keygen -R ${PUBLIC_IP}
-            ssh -i privkey.pem cloud-user@${PUBLIC_IP} 'logout' && break
-          done
-        env:
-          PUBLIC_IP: ${{ needs.launch-instance.outputs.PUBLIC_IP }}
-          PRIVKEY: ${{ secrets.CICD_SSH_KEY }}
+        uses: appleboy/ssh-action@v1.0.3
+        with:
+          host: ${{ env.PUBLIC_IP }}
+          username: cloud-user
+          key: ${{ secrets.CICD_SSH_KEY }}
+          port: 22
+          script: logout
       - name: executing remote ssh commands using ssh key
         uses: appleboy/ssh-action@v1.0.3
         env:
