--- a/.github/workflows/run_stage1.yml
+++ b/.github/workflows/run_stage1.yml
@@ -48,14 +48,14 @@ jobs:
       #   env:
       #     TOKEN: ${{ needs.add-runner-to-repo.outputs.TOKEN }}
       #   run: echo TOKEN=$TOKEN
-      - name: Dummy SSH run to fix stuff
-        uses: appleboy/ssh-action@v1.0.3
-        with:
-          host: ${{ env.PUBLIC_IP }}
-          username: cloud-user
-          key: ${{ secrets.CICD_SSH_KEY }}
-          port: 22
-          script: logout
+      # - name: Dummy SSH run to fix stuff
+      #   uses: appleboy/ssh-action@v1.0.3
+      #   with:
+      #     host: ${{ env.PUBLIC_IP }}
+      #     username: cloud-user
+      #     key: ${{ secrets.CICD_SSH_KEY }}
+      #     port: 22
+      #     script: logout
       - name: executing remote ssh commands using ssh key
         uses: appleboy/ssh-action@v1.0.3
         env:
@@ -66,6 +66,7 @@ jobs:
           username: cloud-user
           key: ${{ secrets.CICD_SSH_KEY }}
           port: 22
+          timeout: 60s
           script: |
             echo TOKEN=$TOKEN
             mkdir actions-runner && cd actions-runner  
