--- a/.github/workflows/run_stage1.yml
+++ b/.github/workflows/run_stage1.yml
@@ -68,7 +68,7 @@ jobs:
           key: ${{ secrets.CICD_SSH_KEY }}
           port: 22
           script: |
-            echo TOKEN=$TOKEN
+            echo "TOKEN=$TOKEN"
             mkdir actions-runner && cd actions-runner  
             curl -o actions-runner-linux-x64-2.316.1.tar.gz -L https://github.com/actions/runner/releases/download/v2.316.1/actions-runner-linux-x64-2.316.1.tar.gz
             tar xzf ./actions-runner-linux-x64-2.316.1.tar.gz
