--- a/.github/workflows/setup-eucalyptus.yml
+++ b/.github/workflows/setup-eucalyptus.yml
@@ -7,12 +7,16 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+        with:
+          ref: one-script-to-rule-them-all # TODO: change to master before merging
+          sparse-checkout: .github/setup_euca.py
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.12'
           cache: 'pip'
-      - run: pip install boto3
+      - run: pip install -r .github/requirements.txt
+      - run: ls .github
       - name: Make runner
         run: .github/setup-euca.py --key-name codici2
         env:
