not proud of the fact it took me 30 minutes to realize the action wasn't working because i put a dash instead of an underscore :/

--- a/.github/workflows/setup-eucalyptus.yml
+++ b/.github/workflows/setup-eucalyptus.yml
@@ -16,9 +16,8 @@ jobs:
           python-version: '3.12'
           cache: 'pip'
       - run: pip install -r .github/requirements.txt
-      - run: ls .github
       - name: Make runner
-        run: .github/setup-euca.py --key-name codici2
+        run: .github/setup_euca.py --key-name codici2
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
