--- a/.github/workflows/setup-eucalyptus.yml
+++ b/.github/workflows/setup-eucalyptus.yml
@@ -21,7 +21,7 @@ jobs:
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
+          AWS_DEFAULT_REGION: 'eucalyptus'
           AWS_ENDPOINT_URL: "http://ec2.poc.aristotle.ucsb.edu:443"
           AMI_IMAGE: "ami-f5412b12d9ad4af01" # TODO: move to GH env var
           GH_ACCESS_TOKEN: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
