--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -10,4 +10,5 @@ jobs:
       - name: Build & Install
         run: ./build-install.sh
       - name: Clean Up
-        run: sudo shutdown +1
+        if: always()
+        run: sudo shutdown now # want this to happen ASAP so no other workflows come try to run in the meantime
