--- a/.github/workflows/run_stage1.yml
+++ b/.github/workflows/run_stage1.yml
@@ -98,7 +98,7 @@ jobs:
       - name: run terminate script
         run: |
           echo "CURR_ID: ${CURR_ID}"
-          #.github/terminate.sh $CURR_ID
+          .github/terminate.sh $CURR_ID
         env:
            AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
            AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
