--- a/.github/workflows/setup-eucalyptus.yml
+++ b/.github/workflows/setup-eucalyptus.yml
@@ -21,12 +21,12 @@ jobs:
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_DEFAULT_REGION: 'eucalyptus'
-          AWS_ENDPOINT_URL: "http://ec2.poc.aristotle.ucsb.edu:443"
-          AMI_IMAGE: "ami-f5412b12d9ad4af01" # TODO: move to GH env var
+          AWS_DEFAULT_REGION: ${{ vars.AWS_DEFAULT_REGION }}
+          AWS_ENDPOINT_URL: ${{ vars.AWS_ENDPOINT_URL }}
+          AMI_IMAGE: ${{ vars.AMI_IMAGE }}
           GH_ACCESS_TOKEN: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
           CICD_SSH_KEY: ${{ secrets.CICD_SSH_KEY }}
           EC2_CREATE_TIMEOUT: 450
-          REPO_URL: "https://github.com/cspot-pipeline/cspot-cicd" # there has to be a way to parameterize this???
+          REPO_URL: ${{ vars.REPO_URL }} # there has to be a way to fetch this automatically???
           
           
