add custom labels to euca launch script, make it easier to use in a dev environment, and fix some cleanup bugs

--- a/.github/workflows/setup-eucalyptus.yml
+++ b/.github/workflows/setup-eucalyptus.yml
@@ -9,7 +9,9 @@ jobs:
       - uses: actions/checkout@v4
         with:
           ref: one-script-to-rule-them-all # TODO: change to master before merging
-          sparse-checkout: .github/setup_euca.py
+          sparse-checkout: |
+            .github/setup_euca.py
+            .github/requirements.txt
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
@@ -17,7 +19,7 @@ jobs:
           cache: 'pip'
       - run: pip install -r .github/requirements.txt
       - name: Make runner
-        run: .github/setup_euca.py --key-name codici2
+        run: .github/setup_euca.py codici2
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
