--- a/.github/workflows/build-test-1-node.yml
+++ b/.github/workflows/build-test-1-node.yml
@@ -1,9 +1,9 @@
-name: Set up Eucalyptus Runner
+name: Build & Test CSPOT on a Single Eucalyptus Node
 
 on: push
 
 jobs:
-  launch-euca:
+  launch-instance:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -19,7 +19,7 @@ jobs:
           cache: 'pip'
       - run: pip install -r .github/requirements.txt
       - name: Make runner
-        run: .github/setup_euca.py codici2
+        run: .github/setup_euca.py codici2 --label single-euca-node
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -29,6 +29,13 @@ jobs:
           GH_ACCESS_TOKEN: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
           CICD_SSH_KEY: ${{ secrets.CICD_SSH_KEY }}
           EC2_CREATE_TIMEOUT: 450
-          REPO_URL: ${{ vars.REPO_URL }} # there has to be a way to fetch this automatically???
+          REPO_URL: "https://www.github.com/${{ github.repository }}"
           
-          
+  build-test:
+    runs-on: [ self-hosted, Linux, x86_64, single-euca-node ]
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          submodules: recursive
+      - name: Build & Install
+        run: ./build-install.sh
